added svg images

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -23,12 +23,152 @@
             <p class="decoration-none"><a href="https://www.doctoroncall.com">DoctorOnCall Global </a><a href="https://www.doctoroncall.com">DoctorOnCall Marketplace </a><a href="https://www.doctoroncall.com/marketplace">DoctorOnCall B2B </a><a href="/healthcare-ai">DoctorOnCall AI </a><a href="/">DoctorOnCall Indonesia </a><a href="/corporate">Corporate Service</a></p>
             <div class="r-500">
             <h2>Follow Us</h2>
-            <div class="socmed flex-box col5"> <a href="#" target="_blank"><img src="../images/main-images/socmed-fb.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-ig.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-tw.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-yt.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-in.svg" alt /></a> </div>
+            <div class="socmed flex-box col5"> <a href="#" target="_blank">
+                <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 26.5.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+                <style type="text/css">
+                    .st0{fill:#FFFFFF;}
+                </style>
+                <path id="Facebook-2" class="st0" d="M53.69,72.36h-9.91V51.24h-4.95v-8.14h4.95v-4.88c0-6.63,2.8-10.58,10.75-10.58h6.61v8.14H57
+                    c-3.09,0-3.3,1.14-3.3,3.26l-0.01,4.07h7.49l-0.88,8.14h-6.61V72.36z"/>
+                </svg>
+            </a><a href="#" target="_blank">
+                <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 26.5.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+                <style type="text/css">
+                    .st0{fill:#FFFFFF;}
+                </style>
+                <path id="Instagram-2" class="st0" d="M59.6,73.76H40.4c-7.81-0.01-14.15-6.34-14.15-14.16V40.4c0.01-7.81,6.34-14.15,14.15-14.15
+                    H59.6c7.81,0.01,14.15,6.34,14.16,14.15V59.6C73.75,67.42,67.42,73.75,59.6,73.76z M40.4,31.02c-5.18,0.01-9.37,4.2-9.38,9.38V59.6
+                    c0.01,5.17,4.2,9.37,9.38,9.37H59.6c5.17-0.01,9.37-4.2,9.37-9.37V40.4c-0.01-5.17-4.2-9.37-9.37-9.38H40.4z M50,62.29
+                    c-6.79,0-12.29-5.51-12.28-12.29c0-6.79,5.51-12.29,12.29-12.28c6.79,0,12.28,5.5,12.28,12.29C62.28,56.78,56.78,62.28,50,62.29
+                    L50,62.29z M50,42.49c-4.15,0-7.51,3.36-7.51,7.51s3.36,7.51,7.51,7.51c4.15,0,7.51-3.36,7.51-7.51l0,0
+                    C57.5,45.85,54.14,42.5,50,42.49L50,42.49z M62.31,40.74c-1.63,0-2.94-1.32-2.94-2.95c0-1.63,1.32-2.94,2.95-2.94
+                    c1.63,0,2.94,1.32,2.94,2.95C65.25,39.43,63.94,40.75,62.31,40.74L62.31,40.74z"/>
+                </svg>                
+            </a><a href="#" target="_blank">
+                <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 26.5.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+                <style type="text/css">
+                    .st0{fill:#FFFFFF;}
+                </style>
+                <path id="Twitter-2" class="st0" d="M72.36,36.13c-1.67,0.74-3.45,1.23-5.27,1.45c1.92-1.15,3.35-2.95,4.03-5.07
+                    c-1.8,1.07-3.77,1.82-5.83,2.23c-3.47-3.7-9.28-3.88-12.97-0.41c-1.85,1.73-2.89,4.15-2.9,6.68c0,0.7,0.08,1.41,0.24,2.09
+                    c-7.38-0.37-14.25-3.85-18.91-9.59c-2.43,4.19-1.19,9.55,2.84,12.25c-1.46-0.04-2.88-0.44-4.15-1.15v0.12
+                    c0,4.37,3.08,8.13,7.36,8.99c-0.79,0.21-1.6,0.32-2.42,0.32c-0.58,0-1.16-0.06-1.73-0.17c1.2,3.74,4.65,6.3,8.57,6.37
+                    c-3.25,2.55-7.27,3.93-11.4,3.92c-0.73,0-1.46-0.04-2.19-0.13c4.19,2.7,9.08,4.13,14.06,4.12c16.87,0,26.1-13.98,26.1-26.1
+                    c0-0.4-0.01-0.79-0.03-1.19C69.58,39.58,71.13,37.97,72.36,36.13L72.36,36.13z"/>
+                </svg>
+            </a> <a href="#" target="_blank">
+                <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 26.5.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+                <style type="text/css">
+                    .st0{fill:#FFFFFF;}
+                </style>
+                <path id="Youtube-2" class="st0" d="M50,69.56L50,69.56c-0.13,0-13.15-0.1-17.09-0.53c-0.21-0.05-0.47-0.09-0.77-0.13
+                    c-1.83-0.11-3.54-0.92-4.78-2.27c-1.46-1.67-1.99-5.48-1.99-5.51c-0.32-2.98-0.5-5.98-0.52-8.98v-4.18c0-4.47,0.51-9.02,0.52-9.07
+                    c0.01-0.05,0.45-3.85,1.99-5.51c1.25-1.4,3.01-2.23,4.88-2.3h0.01l0.14-0.01c6.94-0.52,17.5-0.62,17.6-0.62s10.67,0.1,17.61,0.62
+                    l0.24,0.02c1.85,0.03,3.6,0.87,4.79,2.29c1.46,1.67,1.99,5.48,2,5.51c0,0.04,0.52,4.59,0.52,9.07v4.18c0,4.39-0.51,8.94-0.52,8.98
+                    c-0.01,0.04-0.54,3.84-2,5.51c-1.24,1.4-3.01,2.23-4.88,2.3h-0.01l-0.14,0.01C60.66,69.56,50.11,69.56,50,69.56z M43.93,41.02v19.3
+                    l16.48-9.43L43.93,41.02z"/>
+                </svg>
+            </a> <a href="#" target="_blank">
+                <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 26.5.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+                <style type="text/css">
+                    .st0{fill:#FFFFFF;}
+                </style>
+                <path id="Linkedin-2" class="st0" d="M61.46,69.56V56.85c0-3.04-0.05-6.93-4.21-6.93c-4.22,0-4.86,3.31-4.86,6.71v12.93h-8.1V43.42
+                    h7.75V47h0.11c1.59-2.71,4.54-4.33,7.68-4.22c8.21,0,9.73,5.41,9.73,12.45v14.32H61.46z M39.18,69.56h-8.11V43.42h8.11L39.18,69.56
+                    L39.18,69.56L39.18,69.56z M44.28,43.42h0.01H44.28z M30.43,35.14c0-2.6,2.11-4.7,4.71-4.7c2.6,0,4.7,2.11,4.7,4.71
+                    c0,2.6-2.11,4.7-4.71,4.7C32.54,39.85,30.44,37.74,30.43,35.14z"/>
+                </svg>                
+            </a> </div>
             </div>
         </div>
         <div class="dn a-500 mt-1">
             <h2 class="ta-c">Follow Us</h2>
-            <div class="socmed flex-box col5 centralized" style="max-width: 20em"> <a href="#" target="_blank"><img src="../images/main-images/socmed-fb.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-ig.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-tw.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-yt.svg" alt /></a> <a href="#" target="_blank"><img src="../images/main-images/socmed-in.svg" alt /></a> </div>
+            <div class="socmed flex-box col5 centralized" style="max-width: 20em"> <a href="#" target="_blank">
+                <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 26.5.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+                <style type="text/css">
+                    .st0{fill:#FFFFFF;}
+                </style>
+                <path id="Facebook-2" class="st0" d="M53.69,72.36h-9.91V51.24h-4.95v-8.14h4.95v-4.88c0-6.63,2.8-10.58,10.75-10.58h6.61v8.14H57
+                    c-3.09,0-3.3,1.14-3.3,3.26l-0.01,4.07h7.49l-0.88,8.14h-6.61V72.36z"/>
+                </svg>
+            </a><a href="#" target="_blank">
+                <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 26.5.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+                <style type="text/css">
+                    .st0{fill:#FFFFFF;}
+                </style>
+                <path id="Instagram-2" class="st0" d="M59.6,73.76H40.4c-7.81-0.01-14.15-6.34-14.15-14.16V40.4c0.01-7.81,6.34-14.15,14.15-14.15
+                    H59.6c7.81,0.01,14.15,6.34,14.16,14.15V59.6C73.75,67.42,67.42,73.75,59.6,73.76z M40.4,31.02c-5.18,0.01-9.37,4.2-9.38,9.38V59.6
+                    c0.01,5.17,4.2,9.37,9.38,9.37H59.6c5.17-0.01,9.37-4.2,9.37-9.37V40.4c-0.01-5.17-4.2-9.37-9.37-9.38H40.4z M50,62.29
+                    c-6.79,0-12.29-5.51-12.28-12.29c0-6.79,5.51-12.29,12.29-12.28c6.79,0,12.28,5.5,12.28,12.29C62.28,56.78,56.78,62.28,50,62.29
+                    L50,62.29z M50,42.49c-4.15,0-7.51,3.36-7.51,7.51s3.36,7.51,7.51,7.51c4.15,0,7.51-3.36,7.51-7.51l0,0
+                    C57.5,45.85,54.14,42.5,50,42.49L50,42.49z M62.31,40.74c-1.63,0-2.94-1.32-2.94-2.95c0-1.63,1.32-2.94,2.95-2.94
+                    c1.63,0,2.94,1.32,2.94,2.95C65.25,39.43,63.94,40.75,62.31,40.74L62.31,40.74z"/>
+                </svg>                
+            </a><a href="#" target="_blank">
+                <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 26.5.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+                <style type="text/css">
+                    .st0{fill:#FFFFFF;}
+                </style>
+                <path id="Twitter-2" class="st0" d="M72.36,36.13c-1.67,0.74-3.45,1.23-5.27,1.45c1.92-1.15,3.35-2.95,4.03-5.07
+                    c-1.8,1.07-3.77,1.82-5.83,2.23c-3.47-3.7-9.28-3.88-12.97-0.41c-1.85,1.73-2.89,4.15-2.9,6.68c0,0.7,0.08,1.41,0.24,2.09
+                    c-7.38-0.37-14.25-3.85-18.91-9.59c-2.43,4.19-1.19,9.55,2.84,12.25c-1.46-0.04-2.88-0.44-4.15-1.15v0.12
+                    c0,4.37,3.08,8.13,7.36,8.99c-0.79,0.21-1.6,0.32-2.42,0.32c-0.58,0-1.16-0.06-1.73-0.17c1.2,3.74,4.65,6.3,8.57,6.37
+                    c-3.25,2.55-7.27,3.93-11.4,3.92c-0.73,0-1.46-0.04-2.19-0.13c4.19,2.7,9.08,4.13,14.06,4.12c16.87,0,26.1-13.98,26.1-26.1
+                    c0-0.4-0.01-0.79-0.03-1.19C69.58,39.58,71.13,37.97,72.36,36.13L72.36,36.13z"/>
+                </svg>
+            </a> <a href="#" target="_blank">
+                <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 26.5.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+                <style type="text/css">
+                    .st0{fill:#FFFFFF;}
+                </style>
+                <path id="Youtube-2" class="st0" d="M50,69.56L50,69.56c-0.13,0-13.15-0.1-17.09-0.53c-0.21-0.05-0.47-0.09-0.77-0.13
+                    c-1.83-0.11-3.54-0.92-4.78-2.27c-1.46-1.67-1.99-5.48-1.99-5.51c-0.32-2.98-0.5-5.98-0.52-8.98v-4.18c0-4.47,0.51-9.02,0.52-9.07
+                    c0.01-0.05,0.45-3.85,1.99-5.51c1.25-1.4,3.01-2.23,4.88-2.3h0.01l0.14-0.01c6.94-0.52,17.5-0.62,17.6-0.62s10.67,0.1,17.61,0.62
+                    l0.24,0.02c1.85,0.03,3.6,0.87,4.79,2.29c1.46,1.67,1.99,5.48,2,5.51c0,0.04,0.52,4.59,0.52,9.07v4.18c0,4.39-0.51,8.94-0.52,8.98
+                    c-0.01,0.04-0.54,3.84-2,5.51c-1.24,1.4-3.01,2.23-4.88,2.3h-0.01l-0.14,0.01C60.66,69.56,50.11,69.56,50,69.56z M43.93,41.02v19.3
+                    l16.48-9.43L43.93,41.02z"/>
+                </svg>
+            </a><a href="#" target="_blank">
+                <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 26.5.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+                <style type="text/css">
+                    .st0{fill:#FFFFFF;}
+                </style>
+                <path id="Linkedin-2" class="st0" d="M61.46,69.56V56.85c0-3.04-0.05-6.93-4.21-6.93c-4.22,0-4.86,3.31-4.86,6.71v12.93h-8.1V43.42
+                    h7.75V47h0.11c1.59-2.71,4.54-4.33,7.68-4.22c8.21,0,9.73,5.41,9.73,12.45v14.32H61.46z M39.18,69.56h-8.11V43.42h8.11L39.18,69.56
+                    L39.18,69.56L39.18,69.56z M44.28,43.42h0.01H44.28z M30.43,35.14c0-2.6,2.11-4.7,4.71-4.7c2.6,0,4.7,2.11,4.7,4.71
+                    c0,2.6-2.11,4.7-4.71,4.7C32.54,39.85,30.44,37.74,30.43,35.14z"/>
+                </svg>                
+            </a> </div>
         </div>
         </div>
     </div>
