--- a/views/partials/index/service.ejs
+++ b/views/partials/index/service.ejs
@@ -18,7 +18,10 @@
                 <p class="service-card-title">B2B and B2C Marketplace</p>
                 <p class="service-card-description"><span class="description-bold">Search and compare</span> products and services</p>
             </div>
-            <div class="service-card-learn-more">Learn More</div>
+            <div class="service-card-learn-more">
+                <span>Learn More</span>
+                <img src="../images/main-images/arrowIcon.png" class="arrow-icon"/>
+            </div>
         </a>
 
         <a class="service-card" href="/softwares/online_pharmacy" target="_blank">
@@ -27,7 +30,10 @@
                 <p class="service-card-title">Online Pharmacy</p>
                 <p class="service-card-description">Convenient<span class="description-bold"> prescription orders, refills and delivery</span></p>
             </div>
-            <div class="service-card-learn-more">Learn More</div>
+            <div class="service-card-learn-more">
+                <span>Learn More</span>
+                <img src="../images/main-images/arrowIcon.png" class="arrow-icon"/>
+            </div>
         </a>
 
         <a class="service-card" href="/softwares/super_mobile_app" target="_blank">          
@@ -36,7 +42,10 @@
                 <p class="service-card-title">Mobile App</p>
                 <p class="service-card-description">For <span class="description-bold">easy, on-the-go</span> health management</p>
             </div>
-            <div class="service-card-learn-more">Learn More</div>
+            <div class="service-card-learn-more">
+                <span>Learn More</span>
+                <img src="../images/main-images/arrowIcon.png" class="arrow-icon"/>
+            </div>
         </a>
 
         <a class="service-card" href="/softwares/customer_experience_management" target="_blank">          
@@ -45,7 +54,10 @@
                 <p class="service-card-title">Customer Experience Management (CEM)</p>
                 <p class="service-card-description"><span class="description-bold">Personalised engagement</span> across various <span class="description-bold">touchpoints</span></p>
             </div>
-            <div class="service-card-learn-more">Learn More</div>
+            <div class="service-card-learn-more">
+                <span>Learn More</span>
+                <img src="../images/main-images/arrowIcon.png" class="arrow-icon"/>
+            </div>
         </a>
 
         <a class="service-card" href="/softwares/erp_his" target="_blank">          
@@ -54,7 +66,10 @@
                 <p class="service-card-title">ERP & HIS Integration</p>
                 <p class="service-card-description">Integrate your systems <span class="description-bold">seamlessly</span> with our solutions</p>
             </div>
-            <div class="service-card-learn-more">Learn More</div>
+            <div class="service-card-learn-more">
+                <span>Learn More</span>
+                <img src="../images/main-images/arrowIcon.png" class="arrow-icon"/>
+            </div>
         </a>
 
         <a class="service-card" href="/softwares/health_centres" target="_blank">
@@ -63,7 +78,10 @@
                 <p class="service-card-title">Health Centres</p>
                 <p class="service-card-description">Articles, games, quizzes and other <span class="description-bold">educational content</span></p>
             </div>
-            <div class="service-card-learn-more">Learn More</div>
+            <div class="service-card-learn-more">
+                <span>Learn More</span>
+                <img src="../images/main-images/arrowIcon.png" class="arrow-icon"/>
+            </div>
         </a>
 
         <a class="service-card" href="/softwares/health_forums" target="_blank">          
@@ -72,7 +90,10 @@
                 <p class="service-card-title">Website Forum</p>
                 <p class="service-card-description"><span class="description-bold">Connect</span> with fellow <span class="description-bold">patients</span> and healthcare <span class="service-description-bold">professionals</span></p>
             </div>
-            <div class="service-card-learn-more">Learn More</div>
+            <div class="service-card-learn-more">
+                <span>Learn More</span>
+                <img src="../images/main-images/arrowIcon.png" class="arrow-icon"/>
+            </div>
         </a>
 
     </div>
