--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,6 +64,12 @@ body {
     padding: 0 5em;
 }
 
+/* Align Items Center */
+.align-item {
+    display: flex;
+    align-items: center;
+}
+
 /* Provide paddings on the side: Media query for tablet screens */
 @media (max-width: 992px) {
     .padding-section {
