--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -520,7 +520,16 @@
             C17.45,16.47,17.45,13.51,15.66,11.69z"/>
     </g>
     </svg>
-</span><a href="#">PRODUCT CATALOGUE</a></div>
+</span>
+
+<!-- Breadcrumb -->
+<a class="align-item">
+    <a href="/">PRODUCT CATALOGUE</a>
+    <% if (typeof breadcrumb !== 'undefined' && breadcrumb !== null) { %>
+        <span> > </span>
+        <a href="<%= lib.urlValue %>"><%= breadcrumb %></a>
+    <% } %>
+</div>
 </div>
 <div id="nav-4" class="nav-4 pos-fix bg-blue-1 sr flex-box fd-c t-05-ease">
 <div class="flex-box fullwidth ai-c">
