--- a/views/partials/index/service.ejs
+++ b/views/partials/index/service.ejs
@@ -9,7 +9,10 @@
                 <p class="service-card-title">Telehealth Platform</p>
                 <p class="service-card-description"> <span class="description-bold">Remote</span> consultations and appointments</p>
             </div>
-            <div class="service-card-learn-more">Learn More</div>
+            <div class="service-card-learn-more">
+                <span>Learn More</span>
+                <img src="../images/main-images/arrowIcon.png" class="arrow-icon"/>
+            </div>
         </a>
 
         <a class="service-card" href="/softwares/b2c_b2b_marketplace" target="_blank">
