--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="section bg-blue-1 slide-disable t-05-ease sr">
     <div class="wrap-1 pad">
         <div class="footer flex-box desc gap-1 jc-sb cen centralized">
-        <div class="fb-30"> <img class="mb-1" style="width: 6em; filter: brightness(100)" src="../images/main-images/doc-logo.png" alt="">
+        <div class="fb-30"> <img class="mb-1" style="width: 6em; filter: brightness(100)" src="../images/doc-logo.png" alt="">
             <p>DoctorOnCall is Malaysia's most complete digital healthcare platform to access clinics, pharmacies, hospitals and health laboratories online. DoctorOnCall provides online doctor and specialist consultation via video-call, voice-call, chat, e-pharmacy, health screening, vaccinations, health tests, health forum and health content.</p>
         </div>
         <div>
