--- a/views/partials/index/service.ejs
+++ b/views/partials/index/service.ejs
@@ -3,7 +3,7 @@
     <div class="horizontal-center">
     <div class="service-card-group">
 
-        <a class="service-card" href="/tele_consult_platform" target="_blank">
+        <a class="service-card" href="/teleconsult" target="_blank">
             <div>
                 <img src="../images/main-images/Asset 8.jpg" class="service-card-image" alt="Telehealth Platform Image">          
                 <p class="service-card-title">Telehealth Platform</p>
@@ -15,7 +15,7 @@
             </div>
         </a>
 
-        <a class="service-card" href="/b2c_b2b_marketplace" target="_blank">
+        <a class="service-card" href="/health-marketplace" target="_blank">
             <div>
                 <img src="../images/main-images/Asset 9.jpg" class="service-card-image" alt="B2B and B2C Marketplace Image">
                 <p class="service-card-title">B2B and B2C Marketplace</p>
@@ -39,7 +39,7 @@
             </div>
         </a>
 
-        <a class="service-card" href="/super_mobile_app" target="_blank">          
+        <a class="service-card" href="/health-app" target="_blank">          
             <div>
                 <img src="../images/main-images/Asset 11.jpg" class="service-card-image" alt="Mobile App Image">
                 <p class="service-card-title">Mobile App</p>
@@ -51,7 +51,7 @@
             </div>
         </a>
 
-        <a class="service-card" href="/customer_experience_management" target="_blank">          
+        <a class="service-card" href="/cem" target="_blank">          
             <div>
                 <img src="../images/main-images/Asset 12.jpg" class="service-card-image" alt="Customer Experience Management Image">
                 <p class="service-card-title">Customer Experience Management (CEM)</p>
@@ -75,7 +75,7 @@
             </div>
         </a>
 
-        <a class="service-card" href="/health_centres" target="_blank">
+        <a class="service-card" href="/health-centre" target="_blank">
             <div>
                 <img src="../images/main-images/Asset 16.jpg" class="service-card-image" alt="Health Centres Image">
                 <p class="service-card-title">Health Centres</p>
@@ -87,7 +87,7 @@
             </div>
         </a>
 
-        <a class="service-card" href="/health_forums" target="_blank">          
+        <a class="service-card" href="/health-forum" target="_blank">          
             <div>
                 <img src="../images/main-images/Asset 17.jpg" class="service-card-image" alt="Website Forum Image">
                 <p class="service-card-title">Website Forum</p>
