--- a/views/partials/softwares/review.ejs
+++ b/views/partials/softwares/review.ejs
@@ -6,7 +6,7 @@
         <div>
             <img src="/images/softwares-images/quotation.png" alt="quotation" class="quotation"/>
             <p class="review-hero-title text-start">
-                <%= lib.lang.en.softwares[urlValue].rewiew_quote %>
+                <%= lib.lang.en.softwares[urlValue].review_quote %>
             </p>
             <p class="review-hero-description">
             <span class="description-bold">
