Added ai service

--- a/views/partials/index/service.ejs
+++ b/views/partials/index/service.ejs
@@ -99,6 +99,18 @@
             </div>
         </a>
 
+        <a class="service-card" href="/health-ai" target="_blank">          
+            <div>
+                <img src="../images/main-images/ai.jpg" class="service-card-image" alt="Website Forum Image">
+                <p class="service-card-title">Health AI</p>
+                <p class="service-card-description">Health AI utilizes <span class="description-bold">artificial intelligence</span> technologies and algorithms to improve , enhance diagnosis, treatment, and optimize patient care.</p>
+            </div>
+            <div class="service-card-learn-more">
+                <span>Learn More</span>
+                <img src="../images/main-images/arrowIcon.jpg" class="arrow-icon"/>
+            </div>
+        </a>
+
     </div>
     </div>
 </div>
