--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -534,7 +534,7 @@
 <div id="nav-4" class="nav-4 pos-fix bg-blue-1 sr flex-box fd-c t-05-ease">
     <div class="flex-box fullwidth ai-c">
         <div>
-            <img class="avatar" src="../images/avatar.svg" alt="">
+            <img class="avatar" src="../images/avatar.svg" alt="Avatar">
         </div>
         <div><strong class="hello-user">Hello, Guest!</strong>
           <div><a class="button-white" href="javascript:void(0)">Log In</a><a class="button-white" href="javascript:void(0)">Sign Up</a></div>
