--- a/views/partials/index/benefit.ejs
+++ b/views/partials/index/benefit.ejs
@@ -4,7 +4,7 @@
         <div class="center-benefit-card">
         <div class="benefit-card">
             <div class="horizontal-center benefit-image">
-            <img src="../images/main-images/Asset 5.png" alt="Scalable Image">
+            <img src="../images/main-images/Asset 5.png" alt="Modular">
             </div>
             <p class="benefit-card-title"><span class="description-bold">Modular</span></p>
             <p class="benefit-card-description">Allow clients to <span class="description-bold">customise roll-outs</span> according to business <span class="description-bold">requirements</span></p>
@@ -13,7 +13,7 @@
         <div class="center-benefit-card">
         <div class="benefit-card">
             <div class="horizontal-center benefit-image">
-            <img src="../images/main-images/Asset 6.png" alt="Scalable Image">
+            <img src="../images/main-images/Asset 6.png" alt="Scalable">
             </div>
             <p class="benefit-card-title"><span class="description-bold">Scalable</span></p>
             <p class="benefit-card-description">Scale to <span class="description-bold">millions</span> of interactions via compatibility with <span class="description-bold">serverless upgrade path</span></p>
@@ -23,7 +23,7 @@
         <div class="center-benefit-card">
         <div class="benefit-card">
             <div class="horizontal-center benefit-image">
-            <img src="../images/main-images/Asset 7.png" alt="Scalable Image">
+            <img src="../images/main-images/Asset 7.png" alt="Industry Experience">
             </div>
             <p class="benefit-card-title"><span class="description-bold">Industry Experience</span></p>
             <p class="benefit-card-description">Provide actionable health <span class="description-bold">insights</span> as the leading online digital health platform</p>
