--- a/views/partials/index/secondary.ejs
+++ b/views/partials/index/secondary.ejs
@@ -1,6 +1,6 @@
 <div class="secondary-hero-banner" id="explore-section">
     <div class="vertical-end horizontal-start">
-        <img src="../images/main-images/Asset 3.jpg" alt="Nurse Banner" class="nurse-image">
+        <img src="../images/main-images/Asset 3.jpg" alt="Nurse" class="nurse-image">
     </div>
     <div class="secondary-positioning"> 
         <div>
