--- a/views/partials/index/service.ejs
+++ b/views/partials/index/service.ejs
@@ -5,7 +5,7 @@
 
         <a class="service-card" href="/teleconsult" target="_blank">
             <div>
-                <img src="../images/main-images/Asset 8.jpg" class="service-card-image" alt="Telehealth Platform Image">          
+                <img src="../images/main-images/Asset 8.jpg" class="service-card-image" alt="Telehealth">          
                 <p class="service-card-title">Telehealth Platform</p>
                 <p class="service-card-description"> <span class="description-bold">Remote</span> consultations and appointments</p>
             </div>
@@ -17,7 +17,7 @@
 
         <a class="service-card" href="/health-marketplace" target="_blank">
             <div>
-                <img src="../images/main-images/Asset 9.jpg" class="service-card-image" alt="B2B and B2C Marketplace Image">
+                <img src="../images/main-images/Asset 9.jpg" class="service-card-image" alt="Health Marketplace">
                 <p class="service-card-title">B2B and B2C Marketplace</p>
                 <p class="service-card-description"><span class="description-bold">Search and compare</span> products and services</p>
             </div>
@@ -29,7 +29,7 @@
 
         <a class="service-card" href="/online_pharmacy" target="_blank">
             <div>
-                <img src="../images/main-images/Asset 10.jpg" class="service-card-image" alt="Online Pharmacy Image">
+                <img src="../images/main-images/Asset 10.jpg" class="service-card-image" alt="Online Pharmacy">
                 <p class="service-card-title">Online Pharmacy</p>
                 <p class="service-card-description">Convenient<span class="description-bold"> prescription orders, refills and delivery</span></p>
             </div>
@@ -41,7 +41,7 @@
 
         <a class="service-card" href="/health-app" target="_blank">          
             <div>
-                <img src="../images/main-images/Asset 11.jpg" class="service-card-image" alt="Mobile App Image">
+                <img src="../images/main-images/Asset 11.jpg" class="service-card-image" alt="Health App">
                 <p class="service-card-title">Mobile App</p>
                 <p class="service-card-description">For <span class="description-bold">easy, on-the-go</span> health management</p>
             </div>
@@ -53,7 +53,7 @@
 
         <a class="service-card" href="/cem" target="_blank">          
             <div>
-                <img src="../images/main-images/Asset 12.jpg" class="service-card-image" alt="Customer Experience Management Image">
+                <img src="../images/main-images/Asset 12.jpg" class="service-card-image" alt="Customer Experience Management">
                 <p class="service-card-title">Customer Experience Management (CEM)</p>
                 <p class="service-card-description"><span class="description-bold">Personalised engagement</span> across various <span class="description-bold">touchpoints</span></p>
             </div>
@@ -65,7 +65,7 @@
 
         <a class="service-card" href="/erp_his" target="_blank">          
             <div>
-                <img src="../images/main-images/Asset 15.jpg" class="service-card-image" alt="ERP & HIS Integration Image">
+                <img src="../images/main-images/Asset 15.jpg" class="service-card-image" alt="ERP HIS">
                 <p class="service-card-title">ERP & HIS Integration</p>
                 <p class="service-card-description">Integrate your systems <span class="description-bold">seamlessly</span> with our solutions</p>
             </div>
@@ -77,7 +77,7 @@
 
         <a class="service-card" href="/health-centre" target="_blank">
             <div>
-                <img src="../images/main-images/Asset 16.jpg" class="service-card-image" alt="Health Centres Image">
+                <img src="../images/main-images/Asset 16.jpg" class="service-card-image" alt="Health Centre">
                 <p class="service-card-title">Health Centres</p>
                 <p class="service-card-description">Articles, games, quizzes and other <span class="description-bold">educational content</span></p>
             </div>
@@ -89,7 +89,7 @@
 
         <a class="service-card" href="/health-forum" target="_blank">          
             <div>
-                <img src="../images/main-images/Asset 17.jpg" class="service-card-image" alt="Website Forum Image">
+                <img src="../images/main-images/Asset 17.jpg" class="service-card-image" alt="Website Forum">
                 <p class="service-card-title">Website Forum</p>
                 <p class="service-card-description"><span class="description-bold">Connect</span> with fellow <span class="description-bold">patients</span> and healthcare <span class="service-description-bold">professionals</span></p>
             </div>
@@ -101,7 +101,7 @@
 
         <a class="service-card" href="/health-ai" target="_blank">          
             <div>
-                <img src="../images/main-images/ai.jpg" class="service-card-image" alt="Website Forum Image">
+                <img src="../images/main-images/ai.jpg" class="service-card-image" alt="Health AI">
                 <p class="service-card-title">Health AI</p>
                 <p class="service-card-description">Health AI utilizes <span class="description-bold">artificial intelligence</span> technologies and algorithms to improve , enhance diagnosis, treatment, and optimize patient care.</p>
             </div>
