--- a/views/partials/softwares/key-features.ejs
+++ b/views/partials/softwares/key-features.ejs
@@ -9,7 +9,7 @@
     </div>
     <div class="feature-grid">
       <div>
-        <img src="<%= lib.lang.en.softwares[urlValue].key_feature_image_one %>" alt="image"/>
+        <img src="<%= lib.lang.en.softwares[urlValue].key_feature_image_one %>" alt="Key Feature"/>
         <p class="feature-description">
           <span class="description-bold">
             <%= lib.lang.en.softwares[urlValue].key_feature_bold_description_one %>
@@ -18,7 +18,7 @@
         </p>
       </div>
       <div>
-        <img src="<%= lib.lang.en.softwares[urlValue].key_feature_image_two %>" alt="image"/>
+        <img src="<%= lib.lang.en.softwares[urlValue].key_feature_image_two %>" alt="Key Feature"/>
         <p class="feature-description">
           <span class="description-bold">
             <%= lib.lang.en.softwares[urlValue].key_feature_bold_description_two %>
@@ -27,7 +27,7 @@
         </p>
       </div>
       <div>
-        <img src="<%= lib.lang.en.softwares[urlValue].key_feature_image_three %>" alt="image"/>
+        <img src="<%= lib.lang.en.softwares[urlValue].key_feature_image_three %>" alt="Key Feature"/>
         <p class="feature-description">
           <span class="description-bold">
             <%= lib.lang.en.softwares[urlValue].key_feature_bold_description_three %>
@@ -36,7 +36,7 @@
         </p>
       </div>
       <div>
-        <img src="<%= lib.lang.en.softwares[urlValue].key_feature_image_four %>" alt="image"/>
+        <img src="<%= lib.lang.en.softwares[urlValue].key_feature_image_four %>" alt="Key Feature"/>
         <p class="feature-description">
           <span class="description-bold">
             <%= lib.lang.en.softwares[urlValue].key_feature_bold_description_four %>
