--- a/views/partials/softwares/review.ejs
+++ b/views/partials/softwares/review.ejs
@@ -1,6 +1,6 @@
 <div class="review-banner padding-section" id="eview-section">
     <div class="vertical-center horizontal-center">
-        <img src="<%= lib.lang.en.softwares[urlValue].review_image %>" alt="Tele-consult Image" class="teleconsult-dashboard-image">
+        <img src="<%= lib.lang.en.softwares[urlValue].review_image %>" alt="Review" class="review-image">
     </div>
     <div class="review-positioning"> 
         <div>
