--- a/views/partials/softwares/software-section.ejs
+++ b/views/partials/softwares/software-section.ejs
@@ -14,6 +14,6 @@
         </div>
     </div>
     <div class="vertical-center horizontal-center">
-        <img src="<%= lib.lang.en.softwares[urlValue].software_image %>" alt="Tele-consult Image" class="Tele-consult-image">
+        <img src="<%= lib.lang.en.softwares[urlValue].software_image %>" alt="Healthcare Software" class="healthcare-software-image">
     </div>
 </div>
